--- a/src/app/Returns/Subviews/list-performance/list-performance.component.scss
+++ b/src/app/Returns/Subviews/list-performance/list-performance.component.scss
@@ -100,12 +100,12 @@ td.mat-footer-cell{
 }
 
 //Controls hover and selected for the row?
-tr.example-element-row:not(.example-expanded-row):hover {
-  background: #e3eff7;
-}
-tr.example-element-row:not(.example-expanded-row):active {
-  background: #e3eff7;
-}
+// tr.example-element-row:not(.example-expanded-row):hover {
+//   background: #e3eff7;
+// }
+// tr.example-element-row:not(.example-expanded-row):active {
+//   background: #e3eff7;
+// }
 
 //Controls color of negative values on table
 .negative {
